--- a/_posts/2016-04-04-redis-cpu.markdown
+++ b/_posts/2016-04-04-redis-cpu.markdown
@@ -6,7 +6,7 @@ categories: redis
 tags: 坑 
 ---
 
-周五晚上下班和高中同学吃椰子鸡(大深圳唯一拿得出手的菜了 T.T...)，一个朋友给我打电话，说线上业务出了问题，让帮忙看下。
+周五晚上下班和同学吃椰子鸡(大深圳唯一拿得出手的菜了 T.T...)，一个朋友给我打电话，说线上业务出了问题，让帮忙看下。
 问题要点如下：
 
 - 由于业务量增大，往线上Redis集群增加了一个节点
@@ -44,5 +44,3 @@ tags: 坑
 
 - 做多实例部署， 每个实例的数据集不要太大
 - Redis机器建议内存高配，cpu的核数 >= 实例数
-
-- 
